# zed-react-native-gpui

./: .gitignore  Cargo.toml
.cargo/: config.toml
assets/keymaps/: rngpui-fabric-linux.json  rngpui-fabric-macos.json  rngpui-fabric-windows.json
crates/agent/src/: active_thread.rs  agent.rs  db.rs
crates/agent_ui/src/: text_thread_history.rs
crates/agent_ui_v2/src/: agent_thread_pane.rs  thread_history.rs
crates/collections/: Cargo.toml
crates/gpui/: Cargo.toml  PR_DESCRIPTION.md  README.md  build.rs
crates/gpui/docs/: RETAINED_MODE_ARCHITECTURE.md
crates/gpui/examples/: cache_bench.rs  grid_bench.rs
crates/gpui/src/: app.rs  color.rs  compositor_scene.rs  compositor_state.rs  content_hash.rs  descriptor.rs  display_list.rs  element.rs  fiber.rs  frame_snapshot.rs  gpui.rs  key_dispatch.rs  layer.rs  measure_cache.rs  platform.rs  primitive_cache.rs  property_trees.rs  raster_worker_pool.rs  render_node.rs  retained.rs  scene.rs  style.rs  taffy.rs  task_graph.rs  text_shape_cache.rs  text_system.rs  tile_bridge.rs  tile_manager.rs  util.rs  view.rs  window.rs
crates/gpui/src/app/: entity_map.rs  test_context.rs
crates/gpui/src/elements/: anchored.rs  animation.rs  canvas.rs  deferred.rs  div.rs  image_cache.rs  img.rs  list.rs  svg.rs  text.rs  uniform_list.rs
crates/gpui/src/fiber/: tests.rs
crates/gpui/src/platform/: mac.rs
crates/gpui/src/platform/blade/: blade_renderer.rs  shaders.wgsl
crates/gpui/src/platform/linux/wayland/: window.rs
crates/gpui/src/platform/linux/x11/: window.rs
crates/gpui/src/platform/mac/: display_link.rs  metal4_renderer.rs  metal_renderer.rs  metal_renderer_backend.rs  platform.rs  screen_capture.rs  shaders.metal  shaders_mtl4.metal  status_item.rs  texture_cache.rs  tile_cache.rs  tile_rasterizer.rs  window.rs
crates/gpui/src/platform/test/: window.rs
crates/gpui/src/platform/windows/: directx_renderer.rs  shaders.hlsl  window.rs
crates/gpui/src/text_system/: line.rs  line_layout.rs
crates/gpui/src/window/: context.rs  tests.rs
crates/gpui_macros/: Cargo.toml
crates/gpui_macros/src/: derive_content_hash.rs  gpui_macros.rs
crates/http_client/: Cargo.toml
crates/media/: Cargo.toml
crates/refineable/: Cargo.toml
crates/refineable/derive_refineable/: Cargo.toml
crates/rn_chat_panel/: Cargo.toml  build.rs  codegen.toml  craby.toml
crates/rn_chat_panel/craby-modules/: .gitignore  Cargo.toml  LLMTypes.ts  MarkdownTypes.ts  craby.toml
crates/rn_chat_panel/craby-modules/.craby/: CrabyUtils.hpp  bridging-generated.hpp  ffi.rs  generated.rs  lib.rs  zed_icons_impl.rs  zed_llm_impl.rs  zed_markdown_impl.rs  zed_theme_impl.rs  zed_threads_impl.rs  zed_workspace_impl.rs
crates/rn_chat_panel/craby-modules/cpp/: CrabyUtils.hpp  CxxZedIconsModule.cpp  CxxZedIconsModule.hpp  CxxZedLlmModule.cpp  CxxZedLlmModule.hpp  CxxZedMarkdownModule.cpp  CxxZedMarkdownModule.hpp  CxxZedThemeModule.cpp  CxxZedThemeModule.hpp  CxxZedWorkspaceModule.cpp  CxxZedWorkspaceModule.hpp  bridging-generated.hpp
crates/rn_chat_panel/craby-modules/crates/lib/: Cargo.toml  build.rs
crates/rn_chat_panel/craby-modules/crates/lib/include/: CrabySignals.h
crates/rn_chat_panel/craby-modules/crates/lib/src/: ffi.rs  generated.rs  lib.rs  zed_icons_impl.rs  zed_llm_impl.rs  zed_markdown_impl.rs  zed_theme_impl.rs  zed_workspace_impl.rs
crates/rn_chat_panel/craby-modules/desktop/: CrabyzedmodulesRegistration.hpp
crates/rn_chat_panel/craby-modules/src/: NativeZedIcons.ts  NativeZedLLM.ts  NativeZedMarkdown.ts  NativeZedTheme.ts  NativeZedWorkspace.ts
crates/rn_chat_panel/crates/types/: Cargo.toml
crates/rn_chat_panel/crates/types/src/: lib.rs
crates/rn_chat_panel/js/: babel.config.js  index.js  metro.config.js  package.json  pnpm-lock.yaml  tsconfig.json
crates/rn_chat_panel/js/src/: RNChatHistoryPanel.tsx  RNChatPanel.tsx
crates/rn_chat_panel/js/src/components/: ChatHeader.tsx  ChatInputArea.tsx  ChatMessageList.tsx  ChatStatusBar.tsx  MessageBubble.tsx  NativeDiffView.tsx  NativeTerminalView.tsx  ToolCallCard.tsx
crates/rn_chat_panel/js/src/components/debug/: ThemeInfoPanel.tsx  WorkspaceInfoPanel.tsx  index.ts
crates/rn_chat_panel/js/src/contexts/: ChatContext.tsx  ThemeContext.tsx  index.ts
crates/rn_chat_panel/js/src/hooks/: useAvailableBackends.ts  useThreadSnapshot.ts  useToolCallEvents.ts  useWorkspaceInfo.ts
crates/rn_chat_panel/js/src/specs/: NativeDiffViewNativeComponent.ts  NativeTerminalViewNativeComponent.ts
crates/rn_chat_panel/js/src/styles/: tokens.ts
crates/rn_chat_panel/js/src/types/: index.ts
crates/rn_chat_panel/js/src/utils/: nativeJson.ts  threadSnapshot.ts
crates/rn_chat_panel/native/cpp/: zed_modules_shim.cpp
crates/rn_chat_panel/src/: acp_thread_projection.rs  chat_pane.rs  lib.rs  panel.rs  runtime.rs  zed_host_command.rs
crates/rn_chat_panel/src/native_components/: mod.rs  native_diff_view.rs  native_terminal_view.rs
crates/sum_tree/: Cargo.toml
crates/sum_tree/src/: cursor.rs  sum_tree.rs
crates/util/: Cargo.toml
crates/util_macros/: Cargo.toml
crates/workspace/src/: dock.rs  workspace.rs
crates/zed/: Cargo.toml  build.rs
crates/zed/src/: main.rs  zed.rs
script/: coverage-gpui
tooling/perf/: Cargo.toml
tooling/xtask/src/tasks/: publish_gpui.rs
