[package]
name = "gpui_rn_collections"
version = "0.1.0"
edition.workspace = true
authors = ["Nathan Sobo <nathan@zed.dev>", "Madeline Lane <maddythewisp@gmail.com>"]
publish = true
license = "Apache-2.0"
repository = "https://github.com/rngpui/zed-react-native-gpui"
description = "Standard collection type re-exports (fork for React Native GPUI)"

[lints]
workspace = true

[lib]
path = "src/collections.rs"
doctest = false

[features]
test-support = []

[dependencies]
indexmap.workspace = true
rustc-hash.workspace = true
