[package]
name = "gpui_rn_macros"
version = "0.1.0"
edition.workspace = true
authors = ["Nathan Sobo <nathan@zed.dev>", "Madeline Lane <maddythewisp@gmail.com>"]
publish = true
license = "Apache-2.0"
repository = "https://github.com/rngpui/zed-react-native-gpui"
description = "Macros for GPUI (fork for React Native GPUI)"

[lints]
workspace = true

[features]
inspector = []

[lib]
path = "src/gpui_macros.rs"
proc-macro = true
doctest = true

[dependencies]
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["inspector"] }
