[package]
name = "gpui_rn_http_client"
version = "0.1.0"
edition.workspace = true
authors = ["Nathan Sobo <nathan@zed.dev>", "Madeline Lane <maddythewisp@gmail.com>"]
publish = true
license = "Apache-2.0"
repository = "https://github.com/rngpui/zed-react-native-gpui"
description = "HTTP client library (fork for React Native GPUI)"

[lints]
workspace = true

[features]
test-support = []

[lib]
path = "src/http_client.rs"
doctest = true

[dependencies]
anyhow.workspace = true
async-compression.workspace = true
async-fs.workspace = true
async-tar.workspace = true
bytes.workspace = true
derive_more.workspace = true
futures.workspace = true
http-body.workspace = true
http.workspace = true
log.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
sha2.workspace = true
tempfile.workspace = true
url.workspace = true
util.workspace = true
