[package]
name = "media"
version = "0.1.0"
edition.workspace = true
authors = ["Nathan Sobo <nathan@zed.dev>", "Madeline Lane <maddythewisp@gmail.com>"]
publish = false
license = "Apache-2.0"
repository = "https://github.com/rngpui/zed-react-native-gpui"
description = "macOS media handling bindings (fork for React Native GPUI)"

[lints]
workspace = true

[lib]
path = "src/media.rs"
doctest = false

[dependencies]
anyhow.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation.workspace = true
ctor.workspace = true
foreign-types = "0.5"
metal.workspace = true
core-video.workspace = true
objc.workspace = true

[build-dependencies]
bindgen = "0.71"
