[package]
name = "gpui_rn_refineable"
version = "0.1.0"
edition.workspace = true
authors = ["Nathan Sobo <nathan@zed.dev>", "Madeline Lane <maddythewisp@gmail.com>"]
publish = true
license = "Apache-2.0"
repository = "https://github.com/rngpui/zed-react-native-gpui"
description = "Refinement types for partial struct initialization (fork for React Native GPUI)"

[lints]
workspace = true

[lib]
path = "src/refineable.rs"
doctest = false

[dependencies]
derive_refineable.workspace = true
