[package]
name = "gpui_rn_sum_tree"
version = "0.1.1"
edition.workspace = true
authors = ["Nathan Sobo <nathan@zed.dev>", "Madeline Lane <maddythewisp@gmail.com>"]
publish = true
license = "Apache-2.0"
repository = "https://github.com/rngpui/zed-react-native-gpui"
description = "A sum tree data structure (fork for React Native GPUI)"

[lints]
workspace = true

[lib]
path = "src/sum_tree.rs"
doctest = false

[dependencies]
arrayvec = "0.7.1"
rayon.workspace = true
log.workspace = true

[dev-dependencies]
rand.workspace = true

