[package]
name = "gpui_rn_util_macros"
version = "0.1.1"
edition.workspace = true
authors = ["Nathan Sobo <nathan@zed.dev>", "Madeline Lane <maddythewisp@gmail.com>"]
publish = true
license = "Apache-2.0"
repository = "https://github.com/rngpui/zed-react-native-gpui"
description = "Utility macros (fork for React Native GPUI)"

[lints]
workspace = true

[lib]
path = "src/util_macros.rs"
proc-macro = true
doctest = false

[dependencies]
quote.workspace = true
syn.workspace = true
perf.workspace = true

[features]
perf-enabled = []
