[package]
name = "gpui_rn_derive_refineable"
version = "0.1.0"
edition.workspace = true
authors = ["Nathan Sobo <nathan@zed.dev>", "Madeline Lane <maddythewisp@gmail.com>"]
publish = true
license = "Apache-2.0"
repository = "https://github.com/rngpui/zed-react-native-gpui"
description = "Derive macro for refinement types (fork for React Native GPUI)"


[lints]
workspace = true

[lib]
path = "src/derive_refineable.rs"
proc-macro = true
doctest = false

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
